frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/topbar.scss
.topbar {
  position: fixed;
  top: 0;
  width: 100%;
  padding: 10px 24px;
  background: white;
  box-shadow: rgba(0, 0, 0, 0.24) 0 1px 4px;
  z-index: 9999999;
  @apply flex items-center;

  img {
    display: inline;

    &.city {
      margin-right: 8px;
      height: 48px;
      width: 48px;
    }

    &.state {
      height: 20px;
      max-height: 20px;
      width: auto;
    }
  }

  .ulb {
    font-weight: bold;
    display: inline-block;
  }

  .right {
    float: right;
    margin-top: 12px;
    position: relative;

    svg {
      display: inline;
    }

    .user-img-txt {
      background: #f47738;
      padding: 10px 15px;
      border-radius: 50%;
      color: white;
      font-weight: 700;
    }
  }

  .left {
    float: left;
  }

  .w-80 {
    width: 70%;
  }

  .width-20 {
    width: 30%;
  }

  .margin-top-6 {
    margin-top: 6px;
  }

  .margin-right-30 {
    margin-right: 30px;
  }

  .margin-top-10 {
    margin-top: 10px;
  }

  .icon {
    display: block;
    color: rgb(117, 117, 117);
    fill: rgb(117, 117, 117);
    height: 21px;
    width: 21px;
  }

  .column-gap-15 {
    column-gap: 15px;
  }

  .column-gap-5 {
    column-gap: 5px;
  }

  .select-wrap,
  .employee-select-wrap {
    margin-bottom: 0px;
  }
}

.cp {
  cursor: pointer;
}
.citizen {
  .right {
    margin-top: 5px;
    margin-bottom: 5px;
  }

  .topbar-select-wrap {
    margin-bottom: 0;
  }

  .flex-between {
    @apply flex items-center justify-between;
  }
}

.profile-dropdown--item {
  display: flex;
  flex-direction: row;
  padding: 10px;
  column-gap: 10px;

  &:hover {
    @apply bg-grey-mid;
  }
}

.flex-right {
  @apply flex items-center justify-end;
  min-width: 85px;
}

